# brain-games

./: .pre-commit-config.yaml  README.md  brain-games.py  default.nix  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
brain-games/: brain-games.py
brain_games/scripts/: say_hello.py
games/: progression.py  summarize.py
tests/: test_brain_games.py
